fix alignment/styling

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
+  min-height: 100vh;
 }
 
 .header, .footer {
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: cyan;
+  background-color: blueviolet;
 }
 
 .footer {
@@ -22,7 +22,7 @@ body {
   flex: 1;
   justify-content: center;
   align-items: center;
-  background-color: blueviolet;
+  background-color: cyan;
 }
 
 .canvasBox {
